# protohype

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  tasks.py
protohype/: __init__.py  module_conversion.py  utils.py
tests/unit/: test_module_conversion.py
tests/unit/test_schemas/: base.proto  base_pb2.py  ext.proto  ext_pb2.py  im_pb2.py  loop_pb2.py  sfixed_pb2.py
